<package>
  <name>moveit_commander</name>
  <version>0.9.11</version>
  <description>Python interfaces to MoveIt</description>

  <author email="isucan@google.com">Ioan Sucan</author>

  <maintainer email="me@v4hn.de">Michael Görner</maintainer>
  <maintainer email="rhaschke@techfak.uni-bielefeld.de">Robert Haschke</maintainer>
  <maintainer email="moveit_releasers@googlegroups.com">MoveIt! Release Team</maintainer>

  <license>BSD</license>

  <url type="website">http://moveit.ros.org</url>
  <url type="bugtracker">https://github.com/ros-planning/moveit/issues</url>
  <url type="repository">https://github.com/ros-planning/moveit</url>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>python-catkin-pkg</buildtool_depend>

  <build_depend>python</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>python</run_depend>
  <run_depend>python-pyassimp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>shape_msgs</run_depend>
  <run_depend>tf</run_depend>
</package>
