<package format="2">
  <name>moveit_commander</name>
  <version>1.0.10</version>
  <description>Python interfaces to MoveIt</description>

  <author email="isucan@google.com">Ioan Sucan</author>

  <maintainer email="me@v4hn.de">Michael Görner</maintainer>
  <maintainer email="rhaschke@techfak.uni-bielefeld.de">Robert Haschke</maintainer>
  <maintainer email="moveit_releasers@googlegroups.com">MoveIt! Release Team</maintainer>

  <license>BSD</license>

  <url type="website">http://moveit.ros.org</url>
  <url type="bugtracker">https://github.com/ros-planning/moveit/issues</url>
  <url type="repository">https://github.com/ros-planning/moveit</url>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>python-catkin-pkg</buildtool_depend>

  <build_depend>python</build_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>python</exec_depend>
  <exec_depend>python-pyassimp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>shape_msgs</exec_depend>
  <exec_depend>tf</exec_depend>

  <test_depend>rostest</test_depend>
  <test_depend>moveit_resources_fanuc_moveit_config</test_depend>
</package>
